# agwaita

./: .gitignore  .rustfmt.toml  CONTRIBUTING.md  Cargo.toml  README.md  app.tsx  eslint.config.mts  make.nu  package-lock.json  package.json  style.scss  tsconfig.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
agw-cli/: Cargo.toml
agw-cli/src/: main.rs
agw-cli/src/action/: bar_action.rs  mod.rs  notification_action.rs
agw-lib/logger/: Cargo.toml
agw-lib/logger/src/: lib.rs
agw-lib/outcome/: Cargo.toml
agw-lib/outcome/src/: error.rs  exit_code.rs  lib.rs
agw-service/: Cargo.toml
agw-service/src/: accent_color.rs  airplane_mode.rs  battery.rs  bluetooth.rs  dark_mode.rs  dbus_const.rs  dnd.rs  lib.rs  network.rs  power_mode.rs  runtime.rs  signal.rs
agw-service/src/audio/: mod.rs  service.rs
agw-service/src/brightness/: mod.rs  monitor.rs  service.rs
agw-service/src/calendar/: mod.rs  service.rs  types.rs
agw-service/src/notifications/: action.rs  daemon.rs  mod.rs  notification.rs  notification_service.rs  send.rs  types.rs
agw-service/src/privacy/: geoclue.rs  mod.rs  pipewire.rs
agw-service/src/systray/: dbusmenu.rs  mod.rs  tray_item.rs  watcher.rs
agw-service/src/time/: mod.rs  service.rs
agw-service/src/wm/: detection.rs  mod.rs  niri.rs  trait_impl.rs  types.rs  unsupported.rs
agw-ui/app-launcher/: Cargo.toml
agw-ui/app-launcher/src/: desktop_entries.rs  desktop_entries_service.rs  favorites.rs  lib.rs  message.rs  model.rs  search.rs  window.rs
agw-ui/audio-manager/: Cargo.toml
agw-ui/audio-manager/src/: lib.rs
agw-ui/bluetooth-manager/: Cargo.toml
agw-ui/bluetooth-manager/src/: lib.rs
agw-ui/networkd-manager/: Cargo.toml
agw-ui/networkd-manager/src/: lib.rs
agw-ui/notifications/: Cargo.toml
agw-ui/notifications/src/: lib.rs  message.rs
agw-ui/notifications/src/components/: mod.rs  notification_item.rs  notification_list.rs  notification_popup.rs
agw-ui/notifications/src/model/: mod.rs  notification.rs  notification_store.rs
agw-ui/notifications/src/service/: mod.rs  notification_service_adapter.rs
agw-ui/power-menu/: Cargo.toml
agw-ui/power-menu/src/: lib.rs  message.rs  model.rs  window.rs
agw-ui/session/: Cargo.toml
agw-ui/session/src/: daemon.rs  lib.rs  message.rs
agw-ui/session/src/component/: mod.rs  privacy_indicator.rs  systemd_unit_failed_indicator.rs  workspaces.rs
agw-ui/session/src/component/info_center/: mod.rs
agw-ui/session/src/component/info_center/events_view/: calendar.rs  event_item.rs  mod.rs
agw-ui/session/src/component/info_center/notification_history/: mod.rs  notification_list.rs
agw-ui/session/src/component/quick_settings_menu/: mod.rs
agw-ui/session/src/component/quick_settings_menu/icons/: avatar.rs  mod.rs
agw-ui/session/src/component/quick_settings_menu/icons/audio/: icon.rs  mod.rs
agw-ui/session/src/component/quick_settings_menu/icons/battery/: icon.rs
agw-ui/session/src/component/quick_settings_menu/icons/bluetooth/: icon.rs
agw-ui/session/src/component/quick_settings_menu/icons/brightness/: icon.rs
agw-ui/session/src/component/quick_settings_menu/icons/dnd/: icon.rs  mod.rs
agw-ui/session/src/component/quick_settings_menu/icons/network/: icon.rs
agw-ui/session/src/component/quick_settings_menu/icons/power_mode/: icon.rs
agw-ui/session/src/component/quick_settings_menu/popover/: header.rs  mod.rs
agw-ui/session/src/component/quick_settings_menu/popover/sliders/: audio.rs  brightness.rs  mod.rs
agw-ui/session/src/component/quick_settings_menu/popover/toggles/: dnd.rs  mod.rs  power_mode.rs
agw-ui/session/src/component/systray_icons/: mod.rs
agw-ui/session/src/system_state/: brightness_adapter.rs  calendar_adapter.rs  global_service.rs  messages.rs  mod.rs  privacy_adapter.rs  systemd_failed.rs
agw-ui/wallpaper/: Cargo.toml
agw-ui/wallpaper/src/: lib.rs
scripts/: pre-commit.nu  pre-commit.sh
src/app/: Bar.tsx  BluetoothManager.tsx  Notifications.tsx  PowerMenu.tsx
src/components/bar/: PrivacyIndicator.tsx  SysTray.tsx  SystemdUnitFailed.tsx  Workspaces.tsx
src/components/bar/Clock/: Clock.tsx
src/components/bar/Clock/DataTimePopover/: Agenda.tsx  Calendar.tsx  DateTimePopover.tsx  EventList.tsx
src/components/bar/SystemIndicators/: SystemIndicators.tsx
src/components/bar/SystemIndicators/icons/: AccentColor.tsx  Audio.tsx  Avatar.tsx  Battery.tsx  Bluetooth.tsx  Brightness.tsx  DoNotDisturb.tsx  Network.tsx  PowerMode.tsx
src/components/bar/SystemIndicators/quick-settings/: AccentColor.tsx  AirplaneMode.tsx  Audio.tsx  Bluetooth.tsx  Brightness.tsx  DarkMode.tsx  DoNotDisturb.tsx  PowerMode.tsx
src/components/bar/SystemIndicators/quick-settings/revealer/: AccentColor.tsx  PowerMode.tsx
src/components/notifications/: Notification.tsx
src/components/playground/: Playground.tsx
src/lib/: Dependency.ts  ExternalCommand.ts  Lifecyle.ts  Logger.ts
src/lib/extension/: GLibDateTime.ts  String.ts
src/lib/ui/: Diemensions.ts  Shapes.ts
src/requesthandler/: GlobalRequestHandler.tsx  RequestHandlerParser.tsx
src/requesthandler/impl/: BarRequestHandler.tsx  BluetoothRequestHandler.tsx  NotificationsRequestHandler.tsx  PowerMenuRequestHandler.tsx
src/services/: Agenda.ts  Brightness.tsx
src/services/wm/: WM.ts
src/services/wm/impl/: Niri.ts
