[workspace]
resolver = "2"
members = [
    "agw-cli",
    "agw-lib/logger",
    "agw-lib/outcome",
    "agw-service",
    "agw-ui/app-launcher",
    "agw-ui/audio-manager",
    "agw-ui/bluetooth-manager",
    "agw-ui/networkd-manager",
    "agw-ui/notifications",
    "agw-ui/power-menu",
    "agw-ui/session",
    "agw-ui/wallpaper",
]
default-members = ["agw-cli"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Gouvinb"]
license = "MIT"
repository = "https://github.com/gouvinb/agwaita-rs"

[workspace.dependencies]

# Core dependencies
catalyser = { version = "0.1.1" }
log = { version = "0.4.29" }
pretty_env_logger = { version = "0.5.0" }

# CLI
clap = { version = "4.5.58", features = ["std", "color", "help", "usage", "error-context", "suggestions", "deprecated", "derive", "env", "unicode"] }

# System
signal-hook = { version = "0.4.3" }
inotify = { version = "0.11.0" }

# GTK/UI
gtk4 = { version = "0.10.3", features = ["v4_20"] }

libadwaita = { version = "0.8.1", features = ["v1_8", "gtk_v4_20", "gio_v2_80"] }

relm4 = { version = "0.10.1", features = ["default", "libadwaita"] }
relm4-components = { version = "0.10.1" }

gtk4-layer-shell = { version = "0.7.1" }

# D-Bus
zbus = { version = "5.13.2", default-features = false, features = ["tokio", "blocking-api", "chrono"] }
zvariant = { version = "5.9.2" }

# Async
futures = { version = "0.3.31" }
tokio = { version = "1.49.0", features = ["default", "time"] }

# Utilities
serde = { version = "1.0.228" }
serde_json = { version = "1.0.149" }
chrono = { version = "0.4.43", features = ["default", "unstable-locales"] }

# Desktop entries
freedesktop-desktop-entry = { version = "0.8.1" }

# Niri integration
niri-ipc = { version = "25.11.0" }

# PipeWire integration
pipewire = { version = "0.9.2", features = ["v0_3_77"] }
libspa = { version = "0.9.2" }
libpulse-binding = { version = "2.30.1", features = ["pa_v15"] }

# Brightness
brightness = { version = "0.8.0" }
udev = { version = "0.9.3" }

# Gnome Calendar integration
calcard = { version = "0.3.2" }
rrule = { version = "0.14.0" }

# String normalisation
nucleo-matcher = { version = "0.3.1" }
