[package]
name = "agw-lib-logger"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
agw-lib-outcome = { path = "../outcome" }

catalyser = { workspace = true }
log = { workspace = true }

pretty_env_logger = { workspace = true }