[package]
name = "agw-ui-networkd-manager"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
agw-lib-outcome = { path = "../../agw-lib/outcome" }

catalyser = { workspace = true }
log = { workspace = true }
